---------------------------------------------------------------
wxWidgets Change Log - For more verbose changes, see the manual
---------------------------------------------------------------

INCOMPATIBLE CHANGES SINCE 2.6.x
================================

- wxFontData::GetColour() now returns a const colour


2.7.0
-----

All:

- wxLaunchDefaultBrowser() now supports wxBROWSER_NEW_WINDOW flag
- wxGetWorkingDirectory() deprecated. Use wxGetCwd() instead.

All (GUI):

- Added wxTreeBook.
- Added wxKeyEvent::GetModifiers()
- Added wxDialog::SetEscapeId().
- wxItemContainerImmutable::FindString unified (affects wxRadioBox, wxListBox,
  wxComboBox and wxChoice).
- wxWindow::Fit() now works correctly for frames and dialogs too.
- Added access to the border size between pages and controller in book
  based controls (wxBookCtrlBase::Get/SetInternalBorder).
- Added initial wxRichTextCtrl implementation.
- All book based controls (notebook, treebook etc.) share now the same
  options for orientation (wxBK_TOP, wxBK_DEFAULT, ...) instead of duplicated
  wxLB_TOP, wxNB_TOP, wxCHB_TOP, wxTBK_TOP.
- Added parent window parameter to wxHelpController constructor
  and added SetParentWindow/GetParentWindow.
- wxMultiChoiceDialog uses now wxCheckListBox if possible, wxListBox if not.
- Added wxBitmapButton::SetHoverBitmap()
- Access to titles through Get/SetTitle is available now only for top level
  windows (wxDialog, wxFrame).
- Fixed memory leak of pending events in wxEvtHandler
- Added wxRadioBox::IsItemEnabled/Shown()
- Added space after list item number in wxHTML.

wxMSW:

- wxFileDialog respects absence of wxCHANGE_DIR flag under NT (Brad Anderson).
- Switching page of a hidden notebook doesn't lose focus (Jamie Gadd).
- Removed wxImageList *GetImageList(int) const.
- Fixed MDI context menu problem.
- Removed __WIN95__ define

wxGTK:

- Fixed problem with choice editor in wxGrid whereby the editor
  lost focus when the combobox menu was shown.